crates/test-files/fixtures/compile_errors/call_with_pub_fns.fe
contract Foo:
    pub fn __call__():
        pass

    fn bar():
        pass

    pub fn baz():
        pass

    pub fn bing():
        pass
